Simplify the openapi schema
